Rewrite jaxdb-maven-plugin